@@ -1,8 +1,7 @@
 require File.dirname(__FILE__) + '/../../test_helper'
 
 class RemoteRealexTest < Test::Unit::TestCase
-  AMOUNT = 10000
-
+ 
   def setup
     @gateway = RealexGateway.new(fixtures(:realex))
 
@@ -20,16 +19,14 @@ class RemoteRealexTest < Test::Unit::TestCase
     @mastercard_referral_b = fixtures(:realex_mastercard_referral_b)
     @mastercard_referral_a = fixtures(:realex_mastercard_referral_a)
     @mastercard_coms_error = fixtures(:realex_mastercard_coms_error)
-  end
-  
-  def test_nothing
-    assert true
+    
+    @amount = 10000
   end
   
   def test_realex_purchase
     [ @visa, @mastercard ].each do |card|
 
-      response = @gateway.purchase(AMOUNT, card, 
+      response = @gateway.purchase(@amount, card, 
         :order_id => generate_unique_id,
         :description => 'Test Realex Purchase',
         :billing_address => {
@@ -50,7 +47,7 @@ class RemoteRealexTest < Test::Unit::TestCase
       :login => 'invalid',
       :password => 'invalid'
     )
-    response = gateway.purchase(AMOUNT, @visa, 
+    response = gateway.purchase(@amount, @visa, 
       :order_id => generate_unique_id,
       :description => 'Invalid login test'
     )
@@ -65,7 +62,7 @@ class RemoteRealexTest < Test::Unit::TestCase
   
   def test_realex_purchase_with_invalid_account
 
-    response = @gateway_with_account.purchase(AMOUNT, @visa, 
+    response = @gateway_with_account.purchase(@amount, @visa, 
       :order_id => generate_unique_id,
       :description => 'Test Realex purchase with invalid acocunt'
     )
@@ -82,7 +79,7 @@ class RemoteRealexTest < Test::Unit::TestCase
 
     [ @visa_declined, @mastercard_declined ].each do |card|
 
-      response = @gateway.purchase(AMOUNT, card,
+      response = @gateway.purchase(@amount, card,
         :order_id => generate_unique_id,
         :description => 'Test Realex purchase declined'
       )
@@ -98,7 +95,7 @@ class RemoteRealexTest < Test::Unit::TestCase
   def test_realex_purchase_referral_b
     [ @visa_referral_b, @mastercard_referral_b ].each do |card|
   
-      response = @gateway.purchase(AMOUNT, card,
+      response = @gateway.purchase(@amount, card,
         :order_id => generate_unique_id,
         :description => 'Test Realex Referral B'
       )
@@ -113,7 +110,7 @@ class RemoteRealexTest < Test::Unit::TestCase
   def test_realex_purchase_referral_a
     [ @visa_referral_a, @mastercard_referral_a ].each do |card|
       
-      response = @gateway.purchase(AMOUNT, card,
+      response = @gateway.purchase(@amount, card,
         :order_id => generate_unique_id,
         :description => 'Test Realex Rqeferral A'
       )
@@ -129,7 +126,7 @@ class RemoteRealexTest < Test::Unit::TestCase
 
     [ @visa_coms_error, @mastercard_coms_error ].each do |card|
 
-      response = @gateway.purchase(AMOUNT, card,
+      response = @gateway.purchase(@amount, card,
         :order_id => generate_unique_id,
         :description => 'Test Realex coms error'
       )
@@ -146,7 +143,7 @@ class RemoteRealexTest < Test::Unit::TestCase
   def test_realex_ccn_error
     @visa.number = 5
     
-    response = @gateway.purchase(AMOUNT, @visa, 
+    response = @gateway.purchase(@amount, @visa, 
       :order_id => generate_unique_id,
       :description => 'Test Realex ccn error'
     )
@@ -161,7 +158,7 @@ class RemoteRealexTest < Test::Unit::TestCase
   def test_realex_expiry_month_error
     @visa.month = 13
     
-    response = @gateway.purchase(AMOUNT, @visa, 
+    response = @gateway.purchase(@amount, @visa, 
       :order_id => generate_unique_id,
       :description => 'Test Realex expiry month error'
     )
@@ -176,7 +173,7 @@ class RemoteRealexTest < Test::Unit::TestCase
   def test_realex_expiry_year_error
     @visa.year = 2005
     
-    response = @gateway.purchase(AMOUNT, @visa,
+    response = @gateway.purchase(@amount, @visa,
       :order_id => generate_unique_id,
       :description => 'Test Realex expiry year error'
     )
@@ -191,7 +188,7 @@ class RemoteRealexTest < Test::Unit::TestCase
     @visa.first_name = ""
     @visa.last_name = ""
     
-    response = @gateway.purchase(AMOUNT, @visa, 
+    response = @gateway.purchase(@amount, @visa, 
       :order_id => generate_unique_id,
       :description => 'test_chname_error'
     )
@@ -205,7 +202,7 @@ class RemoteRealexTest < Test::Unit::TestCase
   def test_cvn
     @visa_cvn = @visa.clone
     @visa_cvn.verification_value = "111"
-    response = @gateway.purchase(AMOUNT, @visa_cvn, 
+    response = @gateway.purchase(@amount, @visa_cvn, 
       :order_id => generate_unique_id,
       :description => 'test_cvn'
     )
@@ -215,7 +212,7 @@ class RemoteRealexTest < Test::Unit::TestCase
   end
   
   def test_customer_number
-    response = @gateway.purchase(AMOUNT, @visa, 
+    response = @gateway.purchase(@amount, @visa, 
       :order_id => generate_unique_id,
       :description => 'test_cust_num',
       :customer => 'my customer id'
