@@ -2,8 +2,7 @@ require File.dirname(__FILE__) + '/../../test_helper'
 require 'digest/sha1'
 
 class RealexTest < Test::Unit::TestCase
-  AMOUNT = 100
-
+  
   def setup
     @login = 'your_merchant_id'
     @password = 'your_secret'
@@ -20,7 +19,7 @@ class RealexTest < Test::Unit::TestCase
       :account => 'bill_web_cengal'
     )
     
-    @creditcard = CreditCard.new(
+    @credit_card = CreditCard.new(
       :number => '4263971921001307',
       :month => 8,
       :year => 2008,
@@ -28,6 +27,12 @@ class RealexTest < Test::Unit::TestCase
       :last_name => 'Longsen',
       :type => 'visa'
     )
+    
+    @options = {
+      :order_id => '1'
+    }
+    
+    @amount = 100
   end
   
   
@@ -43,35 +48,23 @@ class RealexTest < Test::Unit::TestCase
     result = Digest::SHA1.hexdigest(result + "." + @password)
     assert_equal "06a8b619cbd76024676401e5a83e7e5453521af3", result
   end
-  
-  
-  def test_successful_request
-    @creditcard.number = 1
-    assert response = @gateway.purchase(AMOUNT, @creditcard, :order_id => 1)
-    assert_success response
-    assert_equal '5555', response.authorization
-    assert response.test?
-  end
-
-  def test_unsuccessful_request
-    @creditcard.number = 2
-    assert response = @gateway.purchase(AMOUNT, @creditcard, :order_id => 1)
-    assert_failure response
-    assert response.test?
-  end
 
   def test_successful_purchase
-    @gateway.expects(:ssl_post).returns(successful_response)
+    @gateway.expects(:ssl_post).returns(successful_purchase_response)
     
-    response = @gateway.purchase(AMOUNT, @creditcard, :order_id => 1)
+    response = @gateway.purchase(@amount, @credit_card, @options)
+    assert_instance_of Response, response
     assert_success response
+    assert response.test?
   end
   
   def test_unsuccessful_purchase
-    @gateway.expects(:ssl_post).returns(unsuccessful_response)
+    @gateway.expects(:ssl_post).returns(unsuccessful_purchase_response)
     
-    response = @gateway.purchase(AMOUNT, @creditcard, :order_id => 1)
+    response = @gateway.purchase(@amount, @credit_card, @options)
+    assert_instance_of Response, response
     assert_failure response
+    assert response.test?
   end
   
   def test_supported_countries
@@ -82,10 +75,23 @@ class RealexTest < Test::Unit::TestCase
     assert_equal [ :visa, :master, :american_express, :diners_club, :switch, :solo, :laser ], RealexGateway.supported_cardtypes
   end
   
+  def test_avs_result_not_supported
+    @gateway.expects(:ssl_post).returns(successful_purchase_response)
+  
+    response = @gateway.purchase(@amount, @credit_card, @options)
+    assert_nil response.avs_result['code']
+  end
+  
+  def test_cvv_result
+    @gateway.expects(:ssl_post).returns(successful_purchase_response)
+  
+    response = @gateway.purchase(@amount, @credit_card, @options)
+    assert_equal 'M', response.cvv_result['code']
+  end
   
   private
   
-  def successful_response
+  def successful_purchase_response
     <<-RESPONSE
 <response timestamp='20010427043422'>
   <merchantid>your merchant id</merchantid>
@@ -114,7 +120,7 @@ class RealexTest < Test::Unit::TestCase
     RESPONSE
   end
   
-  def unsuccessful_response
+  def unsuccessful_purchase_response
     <<-RESPONSE
 <response timestamp='20010427043422'>
   <merchantid>your merchant id</merchantid>
@@ -122,7 +128,7 @@ class RealexTest < Test::Unit::TestCase
   <orderid>order id from request</orderid>
   <authcode>authcode received</authcode>
   <result>01</result>
-  <message>message returned from system</message>
+  <message>[ test system ] message returned from system</message>
   <pasref> realex payments reference</pasref>
   <cvnresult>M</cvnresult>
   <batchid>batch id for this transaction (if any)</batchid>
